k8s/podmulticontainer.yaml
apiVersion: v1
kind: Pod
metadata:
  name: podmulticontainer
spec:
  containers:
  - name: nginx
    image: nginx
  - name: redis
    image: redis
  - name: memcached
    image: memcached
