k8s/pvc-mount.yaml
apiVersion: v1
kind: Pod
metadata:
  name: pvc-mount-pod
  labels:
    env: pvc-mount-pod
spec:
  volumes:
    - name: task-pv-storage
      persistentVolumeClaim:
        claimName: task-pv-claim
  containers:
  - name: nginx
    image: nginx
    ports:
        - containerPort: 80
          name: "http-server"
    volumeMounts:
      - mountPath: "/usr/share/nginx/html"
        name: task-pv-storage
