k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: pong
spec:
  rules:
  - http:
      paths:
      - path: /hitest
        pathType: Prefix
        backend:
          service:
            name: front-end-svc
            port:
              number: 80
